# agent-utils

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
analysing-security/: SKILL.md
analysing-security/references/: agent-checks.md  ci-integration.md  secure-design.md  tool-catalog.md
docs/: SPEC.json
gwt-docker/: SKILL.md
managing-git-worktrees/: SKILL.md  skill.md
managing-git-worktrees/references/: docker-compose-spec.md  env-template-spec.md
secure-design/: SKILL.md
secure-design/assets/: github-action.example.yml
secure-design/references/: ci-integration.md  tool-catalog.md
tests/: README.md
tests/cli/: gwt.bats  security_audit.bats  test_helper.bash
tests/cli/fixtures/: README.md
tests/content/: conftest.py  test_help_parity.py  test_no_dashes.py  test_readme_index.py  test_skill_frontmatter.py
tests/rubrics/: claude_md_coherence.md  readme_skill_section.md  reference_clarity.md  skill_description.md
